--- a/index.html
+++ b/index.html
@@ -148,6 +148,39 @@
                 }
             }
 
+            //function to check task before dispatch - Replaced with Redux Middleware below
+            // const checkAndDispatch = (store, action) => {
+            //     if (action.type === ADD_TODO && action.todo.name.toLowerCase().includes("bitcoin")){
+            //         alert("This is a terrible idea!");
+            //         return;
+            //     }
+            //     if (action.type === ADD_GOAL && action.goal.name.toLowerCase().includes("bitcoin")){
+            //         alert("This is a terrible idea!");
+            //         return;
+            //     }
+            //     store.dispatch(action);
+            // }
+
+            //Redux Middleware
+            const checker = (store) => (next) => (action) => {
+                        if (action.type === ADD_TODO && action.todo.name.toLowerCase().includes("bitcoin")){
+                            return alert("This is a terrible idea!");
+                        }
+                        if (action.type === ADD_GOAL && action.goal.name.toLowerCase().includes("bitcoin")){
+                            return alert("This is a terrible idea!");
+                        }
+                        return next(action);
+            }
+
+            const logger = (store) => (next) => (action) => {
+                console.group();
+                    console.log("Action: ", action.type);
+                    const result = next(action);
+                    console.log("New State: ", store.getState());
+                console.groupEnd();
+                return result
+            }
+
             //no longer needed b/c Redux provides a method to combine reducers
             // const app = (state = {}, action) => {
             //     return {
@@ -156,10 +189,10 @@
             //     }
             // }
 
-            const store = Redux.createStore(Redux.combineReducers({todos,goals}));
+            const store = Redux.createStore(Redux.combineReducers({todos,goals}), Redux.applyMiddleware(checker,logger));
 
             store.subscribe(()=>{
-                console.log("The new state is",store.getState());
+                //console.log("The new state is",store.getState());
                 document.getElementById('goals').innerHTML = '';
                 document.getElementById('todos').innerHTML = '';
 
