--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
         <title>Redux Example</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.min.js"></script>
+        <script src="https://unpkg.com/react@16.3.0-alpha.1/umd/react.development.js"></script>
+        <script src="https://unpkg.com/react-dom@16.3.0-alpha.1/umd/react-dom.development.js"></script>
+        <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
     </head>
     <body>
         <div class="col-lg-8 mx-auto p-3 py-md-5">
@@ -43,7 +46,9 @@
                   <ul id="goals" class="form-text"></ul>
               </div>
             </div>
-          
+          <hr />
+          <h2>React App</h2>
+            <div id="App"></div>
             <footer class="pt-5 my-5 text-muted border-top">
               Created by Jacob C Thomas · © 2021
             </footer>
@@ -247,6 +252,92 @@
                 node.appendChild(removeBtn);
                 document.getElementById('goals').append(node);
             }
+        </script>
+        <script type="text/babel">
+            const List = (props) => (
+                <ul>
+                    {props.items.map((item) => (<li key={item.id}>
+                        <span 
+                            onClick={()=>{props.toggleItem ? props.toggleItem(item):''}}
+                            style={{textDecoration: item.complete ? "line-through":"none"}}
+                        >{item.name}</span>
+                        <button onClick={()=>{props.removeItem(item)}}>X</button></li>))}
+                </ul> 
+            ); 
+
+            class ToDos extends React.Component{
+                addItem = (e) => {
+                    e.preventDefault();
+                    const name = this.input.value;
+                    this.input.value = '';
+                    this.props.store.dispatch(addTodoAction({
+                        name,
+                        complete: false,
+                        id: generateId()
+                    }))
+                }
+                toggleItem = (item) => {
+                    this.props.store.dispatch(toggleTodoAction(item.id));
+                }
+                removeItem = (todo) => {
+                    this.props.store.dispatch(removeTodoAction(todo.id));
+                }
+                render () {
+                    return ( <div>
+                        <h1>React To Do List</h1>
+                        <input type="text" placeholder="Add Todo" ref={(input)=>this.input=input} />
+                        <button onClick={this.addItem}>Add Todo</button>
+                        <List items={this.props.todos} removeItem={this.removeItem} toggleItem={this.toggleItem} />
+                    </div>)
+                }
+            }
+
+            class Goals extends React.Component{
+                addItem = (e) => {
+                    e.preventDefault;
+                    const name = this.goal.value;
+                    this.goal.value = '';
+                    this.props.store.dispatch(addGoalAction({
+                        name,
+                        complete: false,
+                        id: generateId()
+                    }));
+                }
+                removeGoal = (goal) => {
+                    this.props.store.dispatch(removeGoalAction(goal.id));
+                }
+                render () {
+                    return ( <div>
+                        <h1>Goals</h1>
+                        <input
+                            type = "text" 
+                            placeholder = "Add a Goal"
+                            ref = {(input) => (this.goal=input) } 
+                        />
+                        <button onClick={this.addItem}>Add Goal</button>
+                        <hr />
+                        <List items={this.props.goals} removeItem={this.removeGoal} />
+                    </div>)
+                }
+            }
+
+            class App extends React.Component{
+                componentDidMount = () => {
+                    this.props.store.subscribe(() => this.forceUpdate());
+                }
+                render() {
+                    const { store } = this.props;
+                    const { todos, goals } = store.getState();
+
+                    return (
+                        <div>
+                            <ToDos todos={todos} store={store} />
+                            <Goals goals={goals} store={store} />
+                        </div>
+                    );
+                }
+            }
+            ReactDOM.render(<App store={store}/>, document.getElementById("App"))
         </script>
     </body>
 </HTMl>
